# Advent_Of_Code_2025

./: CMakeLists.txt
cust_fileReader/: file_reader.h
day1/: day1_1.c
day2/: day2_1.c  day2_utils.c  day2_utils.h  test.c
day3/: day3.c  day3_utils.c  day3_utils.h  test.c
day4/: day4.c  day4_util.c  day4_util.h  test_day4.c
tools/Arena/: Arena.c  Arena.h
tools/Logger/: logger.c  logger.h
tools/Matrix/: Matrix.c  Matrix.h
tools/Stack/: Stack.c  Stack.h  test.c
tools/ThreadPool/: ThreadPool.c  ThreadPool.h  test.c
tools/cust_fileReader/: file_reader.c  file_reader.h
